--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,8 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: MM
-email:
+title: Re:Developer
+email: 
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
@@ -60,7 +60,8 @@ plugins:
 author:
   name   : "Alonso Gragera"
   avatar : "/assets/images/ellyster.png"
-  bio    : "Machine Learning Expert & Product Owner @Unit4, People Platform, Smart Automation Services."
+  bio    : "Machine Learning Expert
+            @Unit4, Smart Automation Services."
   links:
     - label: "Website"
       icon: "fas fa-fw fa-link"
